--- a/night.html
+++ b/night.html
@@ -16,6 +16,12 @@
         <script src="https://cdn.jsdelivr.net/npm/pinkfluffyunicorn@1.0.1/dist/pinkfluffyunicorn.min.js"></script>
         <script src="web/twemoji-parser.js"></script>
         <script src="web/parachute.min.js"></script>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
         <div id="unicorn-display"></div>
