--- a/night.html
+++ b/night.html
@@ -17,7 +17,9 @@
         <script src="web/twemoji-parser.js"></script>
         <script src="web/parachute.min.js"></script>
         <style>
-            body {
+            html, body {
+                background-color: transparent;
+                height: 100%;
                 margin: 0;
                 padding: 0;
             }
