Border Fix Attempt #4

--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
         <script src="web/twemoji-parser.js"></script>
         <script src="web/parachute.min.js"></script>
         <style>
-            html, body {
+            * {
                 background-color: transparent;
-                height: 100%;
                 margin: 0;
                 padding: 0;
-            }
-            * {
-                background-color: transparent !important;
+                border: 0;
             }
         </style>
     </head>
