--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
                     "avellana": "avelana",
                     "jimmy": "jimmy",
                     "sammie": "sammie",
-                    "boybear": "bear",
-                    "girlbear": "beargirl",
+                    "boy": "boy",
+                    "girl": "girl",
+                    "rabbit": "rabbit",
+                    "chick": "chick",
                 },
-                playable: [ "boybear", "girlbear" ],
+                playable: [ "chick", "rabbit" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
