Session API Reporting

--- a/night.html
+++ b/night.html
@@ -29,7 +29,7 @@
         <div id="unicorn-display"></div>
         <script>
             const params = new URLSearchParams( location.search );
-            setupGame( "Pixel Parachute", {
+            setupGame( "Pixel Parachute (Night)", {
                 path: "https://www.pixelplush.dev",
                 bg: "game-parachute/bcg_night",
                 target: "game-parachute/target_night",
