--- a/retro.html
+++ b/retro.html
@@ -48,8 +48,11 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
+                    "bellflower": "bellflower",
+                    "calendula": "calendula",
+                    "poppy": "poppy",
                 },
-                playable: [ "boy", "girl" ],
+                playable: [ "bellflower", "calendula", "poppy" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
