--- a/night.html
+++ b/night.html
@@ -45,10 +45,11 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "rabbit": "rabbit",
-                    "chick": "chick",
+                    "bellflower": "bellflower",
+                    "calendula": "calendula",
+                    "poppy": "poppy",
                 },
-                playable: [ "chick", "rabbit" ],
+                playable: [ "bellflower", "calendula", "poppy" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
