--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                     "game-parachute/chute_white_red", "game-parachute/chute_white_turquoise", "game-parachute/chute_white_yellow",
                     "game-parachute/chute_yellow"
                 ],
+                droplets: [
+                    "items/droplets/greydroplet2",
+                    "items/droplets/purpledroplet2",
+                    "items/droplets/greendroplet2",
+                    "items/droplets/bluedroplet2",
+                    "items/droplets/reddroplet2",
+                    "items/droplets/yellowdroplet2",
+                ],
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -68,6 +76,7 @@
                 clouds: params.get( "clouds" ),
                 hideTilDrop: params.get( "hideTilDrop" ),
                 volume: params.get( "volume" ),
+                droplets: params.get( "droplets" ),
             });
         </script>
     </body>
