--- a/pool_red.html
+++ b/pool_red.html
@@ -81,6 +81,7 @@
                 hideTilDrop: params.get( "hideTilDrop" ),
                 volume: params.get( "volume" ),
                 droplets: params.get( "droplets" ),
+                command: params.get( "command" )
             });
         </script>
     </body>
