--- a/retro.html
+++ b/retro.html
@@ -70,6 +70,7 @@
                 hideTilDrop: params.get( "hideTilDrop" ),
                 volume: params.get( "volume" ),
                 droplets: params.get( "droplets" ),
+                command: params.get( "command" )
             });
         </script>
     </body>
