--- a/pool_blue.html
+++ b/pool_blue.html
@@ -32,7 +32,7 @@
             setupGame( "Pixel Parachute (Pool Party, Blue)", {
                 path: "https://www.pixelplush.dev",
                 bg: "game-parachute/bcg",
-                target: "game-parachute/target_pool_blue_new",
+                target: [ "game-parachute/target_pool_blue/target_pool_blue1", "game-parachute/target_pool_blue/target_pool_blue2", "game-parachute/target_pool_blue/target_pool_blue3", "game-parachute/target_pool_blue/target_pool_blue4", "game-parachute/target_pool_blue/target_pool_blue5", "game-parachute/target_pool_blue/target_pool_blue6", "game-parachute/target_pool_blue/target_pool_blue7", "game-parachute/target_pool_blue/target_pool_blue8", "game-parachute/target_pool_blue/target_pool_blue9" ],
                 target_offset: -12,
                 target_width: 384,
                 target_particles: 0x0000FF,
