--- a/pool_red.html
+++ b/pool_red.html
@@ -32,7 +32,7 @@
             setupGame( "Pixel Parachute (Pool Party, Red)", {
                 path: "https://www.pixelplush.dev",
                 bg: "game-parachute/bcg",
-                target: "game-parachute/target_pool_red_new",
+                target: [ "game-parachute/target_pool_red/target_pool_red1", "game-parachute/target_pool_red/target_pool_red2", "game-parachute/target_pool_red/target_pool_red3", "game-parachute/target_pool_red/target_pool_red4", "game-parachute/target_pool_red/target_pool_red5", "game-parachute/target_pool_red/target_pool_red6", "game-parachute/target_pool_red/target_pool_red7", "game-parachute/target_pool_red/target_pool_red8", "game-parachute/target_pool_red/target_pool_red9" ],
                 target_offset: -12,
                 target_width: 384,
                 target_particles: 0x0000FF,
