New Chars & Sale Banner

--- a/retro.html
+++ b/retro.html
@@ -56,11 +56,13 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "bellflower": "bellflower",
-                    "calendula": "calendula",
-                    "poppy": "poppy",
+                    "nova": "mushroom_man_purple",
+                    "lotus": "mushroom_man_pink",
+                    "tori": "mushroom_man_green",
+                    "kiro": "fairy_boy",
+                    "koral": "fairy_girl",
                 },
-                playable: [ "bellflower", "calendula", "poppy" ],
+                playable: [ "nova", "lotus", "tori", "kiro", "koral" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
