Remove Sale Banner & Revert Target

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             setupGame( "Pixel Parachute (Day)", {
                 path: "https://www.pixelplush.dev",
                 bg: "game-parachute/bcg",
-                target: "game-parachute/target",
+                target: "game-parachute/target_original",
                 clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
                 parachutes: [
                     "game-parachute/chute_black_blue", "game-parachute/chute_black_purple", "game-parachute/chute_black_red",
