--- a/autumn.html
+++ b/autumn.html
@@ -32,10 +32,12 @@
             setupGame( "Pixel Parachute (Autumn)", {
                 path: "https://www.pixelplush.dev",
                 bg: "game-parachute/autumn_theme/bcg",
-                target: [ "game-parachute/autumn_theme/target_leaves2" ],
+                target: "game-parachute/autumn_theme/target_leaves2",
+                target_front: "game-parachute/autumn_theme/target_leaves_front2",
                 target_offset: -12,
                 target_width: 384,
-                target_particles: 0x0000FF,
+                target_y_offset: 50,
+                target_boosh: [ "game-parachute/autumn_theme/land_anim1", "game-parachute/autumn_theme/land_anim2", "game-parachute/autumn_theme/land_anim3", "game-parachute/autumn_theme/land_anim4", "game-parachute/autumn_theme/land_anim5" ],
                 clouds: [ "game-parachute/autumn_theme/cloud1", "game-parachute/autumn_theme/cloud2", "game-parachute/autumn_theme/cloud3", "game-parachute/autumn_theme/cloud4", "game-parachute/autumn_theme/cloud5" ],
                 parachutes: [
                     "game-parachute/autumn_theme/chute_brown1", "game-parachute/autumn_theme/chute_brown2", "game-parachute/autumn_theme/chute_green1",
@@ -44,12 +46,12 @@
                     "game-parachute/autumn_theme/chute_yellow2"
                 ],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+                    "items/acorn",
+                    "items/pinecone",
+                    "items/acorn_gold",
+                    "items/pinecone_gold",
+                    "items/acorn_gold",
+                    "items/pinecone_gold",
                 ],
                 target_sound: "sfx/droplet.wav",
                 drop_sound: "sfx/woodrop.mp3",
