--- a/autumn.html
+++ b/autumn.html
@@ -48,10 +48,10 @@
                 droplets: [
                     "items/acorn",
                     "items/pinecone",
-                    "items/acorn_gold",
-                    "items/pinecone_gold",
-                    "items/acorn_gold",
-                    "items/pinecone_gold",
+                    "items/acorn",
+                    "items/pinecone",
+                    "items/acorn",
+                    "items/pinecone",
                 ],
                 target_sound: "sfx/droplet.wav",
                 drop_sound: "sfx/woodrop.mp3",
