--- a/autumn.html
+++ b/autumn.html
@@ -64,13 +64,10 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "nova": "mushroom_man_purple",
-                    "lotus": "mushroom_man_pink",
-                    "tori": "mushroom_man_green",
-                    "kiro": "fairy_boy",
-                    "koral": "fairy_girl",
+                    "amanita": "amanita",
+                    "twiglet": "twiglet",
                 },
-                playable: [ "nova", "lotus", "tori", "kiro", "koral" ],
+                playable: [ "amanita", "twiglet" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
