--- a/autumn.html
+++ b/autumn.html
@@ -77,7 +77,8 @@
                 hideTilDrop: params.get( "hideTilDrop" ),
                 volume: params.get( "volume" ),
                 droplets: params.get( "droplets" ),
-                command: params.get( "command" )
+                command: params.get( "command" ),
+                cooldown: params.get( "cooldown" )
             });
         </script>
     </body>
