--- a/pool_blue.html
+++ b/pool_blue.html
@@ -83,7 +83,8 @@
                 hideTilDrop: params.get( "hideTilDrop" ),
                 volume: params.get( "volume" ),
                 droplets: params.get( "droplets" ),
-                command: params.get( "command" )
+                command: params.get( "command" ),
+                cooldown: params.get( "cooldown" )
             });
         </script>
     </body>
