--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Day)", {
-                path: "https://www.pixelplush.dev",
+                path: "https://ghcdn.rawgit.org/pixelplush/assets",
                 bg: "game-parachute/bcg",
                 target: "game-parachute/target_original",
                 clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
