--- a/night.html
+++ b/night.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Night)", {
-                path: "https://www.pixelplush.dev",
+                path: "https://ghcdn.rawgit.org/pixelplush/assets",
                 bg: "game-parachute/bcg_night",
                 target: "game-parachute/target_night",
                 clouds: [ "game-parachute/cloud1_night", "game-parachute/cloud2_night", "game-parachute/cloud3_night", "game-parachute/cloud4_night", "game-parachute/cloud5_night" ],
