--- a/retro.html
+++ b/retro.html
@@ -33,7 +33,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Retro)", {
-                path: "https://www.pixelplush.dev",
+                path: "https://ghcdn.rawgit.org/pixelplush/assets",
                 bg: "game-parachute/bcg_retro",
                 target: "game-parachute/target_retro1",
                 clouds: [ "game-parachute/cloud1_retro", "game-parachute/cloud2_retro", "game-parachute/cloud3_retro", "game-parachute/cloud4_retro", "game-parachute/cloud5_retro" ],
