--- a/pool_red.html
+++ b/pool_red.html
@@ -35,7 +35,7 @@
                 target: [ "game-parachute/target_pool_red/target_pool_red1", "game-parachute/target_pool_red/target_pool_red2", "game-parachute/target_pool_red/target_pool_red3", "game-parachute/target_pool_red/target_pool_red4", "game-parachute/target_pool_red/target_pool_red5", "game-parachute/target_pool_red/target_pool_red6", "game-parachute/target_pool_red/target_pool_red7", "game-parachute/target_pool_red/target_pool_red8", "game-parachute/target_pool_red/target_pool_red9" ],
                 target_offset: -12,
                 target_width: 384,
-                target_particles: 0x0000FF,
+                target_particles: [ "#74cbfb", "#50b0e5" ],
                 clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
                 parachutes: [
                     "game-parachute/chute_black_blue", "game-parachute/chute_black_purple", "game-parachute/chute_black_red",
