Switch to JSDelivr

--- a/halloween.html
+++ b/halloween.html
@@ -29,7 +29,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Autumn)", {
-                path: "https://ghcdn.rawgit.org/pixelplush/assets",
+                path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg_night",
                 target: [ "game-parachute/cauldron/cauldron1", "game-parachute/cauldron/cauldron2", "game-parachute/cauldron/cauldron3", "game-parachute/cauldron/cauldron4", "game-parachute/cauldron/cauldron5", "game-parachute/cauldron/cauldron6", "game-parachute/cauldron/cauldron7", "game-parachute/cauldron/cauldron8", "game-parachute/cauldron/cauldron9",
                           "game-parachute/cauldron/cauldron11", "game-parachute/cauldron/cauldron12", "game-parachute/cauldron/cauldron13", "game-parachute/cauldron/cauldron14", "game-parachute/cauldron/cauldron15", "game-parachute/cauldron/cauldron16", "game-parachute/cauldron/cauldron17", "game-parachute/cauldron/cauldron18", "game-parachute/cauldron/cauldron19", "game-parachute/cauldron/cauldron20"],
