--- a/pool_blue.html
+++ b/pool_blue.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Pool Party, Blue)", {
-                path: "https://ghcdn.rawgit.org/pixelplush/assets",
+                path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg",
                 target: [ "game-parachute/target_pool_blue/target_pool_blue1", "game-parachute/target_pool_blue/target_pool_blue2", "game-parachute/target_pool_blue/target_pool_blue3", "game-parachute/target_pool_blue/target_pool_blue4", "game-parachute/target_pool_blue/target_pool_blue5", "game-parachute/target_pool_blue/target_pool_blue6", "game-parachute/target_pool_blue/target_pool_blue7", "game-parachute/target_pool_blue/target_pool_blue8", "game-parachute/target_pool_blue/target_pool_blue9" ],
                 target_offset: -12,
