--- a/pool_red.html
+++ b/pool_red.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Pool Party, Red)", {
-                path: "https://ghcdn.rawgit.org/pixelplush/assets",
+                path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg",
                 target: [ "game-parachute/target_pool_red/target_pool_red1", "game-parachute/target_pool_red/target_pool_red2", "game-parachute/target_pool_red/target_pool_red3", "game-parachute/target_pool_red/target_pool_red4", "game-parachute/target_pool_red/target_pool_red5", "game-parachute/target_pool_red/target_pool_red6", "game-parachute/target_pool_red/target_pool_red7", "game-parachute/target_pool_red/target_pool_red8", "game-parachute/target_pool_red/target_pool_red9" ],
                 target_offset: -12,
