--- a/autumn.html
+++ b/autumn.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Autumn)", {
-                path: "https://ghcdn.rawgit.org/pixelplush/assets",
+                path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/autumn_theme/bcg",
                 target: "game-parachute/autumn_theme/target_leaves2",
                 target_front: "game-parachute/autumn_theme/target_leaves_front2",
