--- a/halloween.html
+++ b/halloween.html
@@ -43,12 +43,20 @@
                     "game-parachute/chute_black", "game-parachute/chute_black_green",
                 ],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+                    [ "items/candycorn", "items/green_treat", "items/pink_treat" ],
+                    [ "items/candycorn", "items/green_treat", "items/pink_treat", "items/potion_green", "items/potion_pink" ],
+                    [ "items/candycorn", "items/green_treat", "items/pink_treat", "items/potion_green", "items/potion_pink", "items/potion_green", "items/potion_pink" ],
+                    [ "items/potion_green", "items/potion_pink", "items/golden_pumpkin" ],
+                    [ "items/potion_green", "items/potion_pink", "items/golden_pumpkin", "items/golden_pumpkin" ],
+                    "items/golden_pumpkin",
+                ],
+                dropletSizes: [
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
                 ],
                 target_sound: "sfx/droplet.wav",
                 drop_sound: "sfx/woodrop.mp3",
