--- a/retro.html
+++ b/retro.html
@@ -46,6 +46,14 @@
                     "items/droplets/reddroplet2",
                     "items/droplets/yellowdroplet2",
                 ],
+                dropletSizes: [
+                    1.5,
+                    1,
+                    1,
+                    1,
+                    1,
+                    1,
+                ],
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
