--- a/pool_blue.html
+++ b/pool_blue.html
@@ -56,6 +56,14 @@
                     "items/droplets/reddroplet2",
                     "items/droplets/yellowdroplet2",
                 ],
+                dropletSizes: [
+                    1.5,
+                    1,
+                    1,
+                    1,
+                    1,
+                    1,
+                ],
                 target_sound: "sfx/droplet.wav",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
