Adjust snowflake size

--- a/christmas.html
+++ b/christmas.html
@@ -38,6 +38,7 @@
                 target_y_offset: 30,
                 target_particles: [ "#ffffff", "#ffffff" ],
                 target_boosh: [ "game-parachute/christmas_theme/snowflake_1", "game-parachute/christmas_theme/snowflake_2" ],
+                target_boosh_scale: 1,
                 clouds: [ "game-parachute/christmas_theme/cloud1", "game-parachute/christmas_theme/cloud2", "game-parachute/christmas_theme/cloud3", "game-parachute/christmas_theme/cloud4", "game-parachute/christmas_theme/cloud5" ],
                 parachutes: [
                     "game-parachute/winter_theme/chute_snowflake1", "game-parachute/winter_theme/chute_snowflake2", "game-parachute/winter_theme/parachute_snow",
