--- a/christmas.html
+++ b/christmas.html
@@ -37,7 +37,7 @@
                 target_width: 384,
                 target_y_offset: 30,
                 target_particles: [ "#ffffff", "#ffffff" ],
-                target_boosh: [ "game-parachute/christmas_theme/snowflake_1", "game-parachute/christmas_theme/snowflake_2" ],
+                target_boosh: [ "game-parachute/christmas_theme/snowflake_1", "game-parachute/christmas_theme/snowflake_2", "game-parachute/christmas_theme/snowflake_3", "game-parachute/christmas_theme/snowflake_4", "game-parachute/christmas_theme/snowflake_5", "game-parachute/christmas_theme/snowflake_6", "game-parachute/christmas_theme/snowflake_7" ],
                 target_boosh_scale: 1,
                 clouds: [ "game-parachute/christmas_theme/cloud1", "game-parachute/christmas_theme/cloud2", "game-parachute/christmas_theme/cloud3", "game-parachute/christmas_theme/cloud4", "game-parachute/christmas_theme/cloud5" ],
                 parachutes: [
