--- a/snowroll.html
+++ b/snowroll.html
@@ -31,35 +31,34 @@
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Hill", {
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
-                bg: "game-parachute/bcg",
-                target: "game-parachute/target_original",
-                clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
+                bg: "game-parachute/christmas_theme/bcg_christmas",
+                target: "game-parachute/christmas_theme/target_christmas",
+                target_front: "game-parachute/christmas_theme/target_christmas_front",
+                target_offset: -26,
+                target_width: 384,
+                target_y_offset: 30,
+                target_particles: [ "#ffffff", "#ffffff" ],
+                target_boosh: [ "game-parachute/christmas_theme/snowflake_1", "game-parachute/christmas_theme/snowflake_2", "game-parachute/christmas_theme/snowflake_3", "game-parachute/christmas_theme/snowflake_4", "game-parachute/christmas_theme/snowflake_5", "game-parachute/christmas_theme/snowflake_6", "game-parachute/christmas_theme/snowflake_7" ],
+                target_boosh_scale: 1,
+                clouds: [ "game-parachute/christmas_theme/cloud1", "game-parachute/christmas_theme/cloud2", "game-parachute/christmas_theme/cloud3", "game-parachute/christmas_theme/cloud4", "game-parachute/christmas_theme/cloud5" ],
                 parachutes: [
-                    "game-parachute/chute_black_blue", "game-parachute/chute_black_purple", "game-parachute/chute_black_red",
-                    "game-parachute/chute_black_white", "game-parachute/chute_black_yellow", "game-parachute/chute_blue_green",
-                    "game-parachute/chute_blue_purple", "game-parachute/chute_blue_yellow", "game-parachute/chute_blue",
-                    "game-parachute/chute_green", "game-parachute/chute_pink_blue", "game-parachute/chute_pink_purple",
-                    "game-parachute/chute_pink", "game-parachute/chute_purple_blue", "game-parachute/chute_purple",
-                    "game-parachute/chute_red_purple", "game-parachute/chute_retro", "game-parachute/chute_white_blue",
-                    "game-parachute/chute_white_green", "game-parachute/chute_white_pink", "game-parachute/chute_white_purple",
-                    "game-parachute/chute_white_red", "game-parachute/chute_white_turquoise", "game-parachute/chute_white_yellow",
-                    "game-parachute/chute_yellow"
+                    "game-parachute/winter_theme/chute_snowflake1", "game-parachute/winter_theme/chute_snowflake2", "game-parachute/winter_theme/parachute_snow",
                 ],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+                    [ "items/candy_cane", "items/gift_small_green", "items/gift_smal_redl", "items/gift_smal_blue" ],
+                    [ "items/candy_cane", "items/gift_small_green", "items/gift_smal_redl", "items/gift_smal_blue", "items/gift_small_green", "items/gift_smal_redl", "items/gift_smal_blue" ],
+                    [ "items/candy_cane", "items/gift_small_green", "items/gift_smal_redl", "items/gift_smal_blue", "items/gift_big_green", "items/gift_big_pink" ],
+                    [ "items/gift_big_green", "items/gift_big_pink", "items/megagift" ],
+                    [ "items/gift_big_green", "items/gift_big_pink", "items/megagift", "items/megagift" ],
+                    "items/megagift",
                 ],
                 dropletSizes: [
-                    1.5,
-                    1,
-                    1,
-                    1,
-                    1,
-                    1,
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
+                    0.5,
                 ],
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
