Update Droplet SFX

--- a/pool_blue.html
+++ b/pool_blue.html
@@ -64,7 +64,7 @@
                     1,
                     1,
                 ],
-                target_sound: "sfx/droplet.wav",
+                target_sound: "sfx/droplet.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
