--- a/retro.html
+++ b/retro.html
@@ -64,13 +64,11 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "nova": "mushroom_man_purple",
-                    "lotus": "mushroom_man_pink",
-                    "tori": "mushroom_man_green",
-                    "kiro": "fairy_boy",
-                    "koral": "fairy_girl",
+                    "snowman": "snowman",
+                    "elf": "elf",
+                    "elfgirl": "elfgirl",
                 },
-                playable: [ "nova", "lotus", "tori", "kiro", "koral" ],
+                playable: [ "snowman", "elf", "elfgirl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
