--- a/christmas.html
+++ b/christmas.html
@@ -59,7 +59,7 @@
                     0.5,
                     0.5,
                 ],
-                target_sound: "sfx/droplet.mp3",
+                target_sound: "sfx/snow_step.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
