Parachute offset & spring target update

--- a/spring.html
+++ b/spring.html
@@ -33,14 +33,15 @@
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/spring_theme/bcg",
                 target: "game-parachute/spring_theme/target",
-                // target_front: "game-parachute/spring_theme/target_leaves_front2",
+                target_front: "game-parachute/spring_theme/target_spring_front",
                 target_offset: 0,
                 target_width: 384,
-                target_y_offset: 40,
+                target_y_offset: 50,
                 target_boosh: [ "game-parachute/spring_theme/petal1", "game-parachute/spring_theme/petal2", "game-parachute/spring_theme/petal3", "game-parachute/spring_theme/petal4", "game-parachute/spring_theme/petal5",
                     "game-parachute/spring_theme/petal6", "game-parachute/spring_theme/petal7", "game-parachute/spring_theme/petal8", "game-parachute/spring_theme/petal9", "game-parachute/spring_theme/petal10",
                     "game-parachute/spring_theme/petal11", "game-parachute/spring_theme/petal12" ],
                 clouds: [ "game-parachute/spring_theme/cloud1", "game-parachute/spring_theme/cloud2", "game-parachute/spring_theme/cloud3", "game-parachute/spring_theme/cloud4", "game-parachute/spring_theme/cloud5" ],
+                parachute_offset: 0,
                 parachutes: [
                     "game-parachute/spring_theme/hot_air_balloon_purple", "game-parachute/spring_theme/hot_air_balloon_pink", "game-parachute/spring_theme/hot_air_balloon_pink2",
                     "game-parachute/spring_theme/hot_air_balloon_orange"
