Ready for updated release

--- a/easter.html
+++ b/easter.html
@@ -29,35 +29,47 @@
         <div id="unicorn-display"></div>
         <script>
             const params = new URLSearchParams( location.search );
-            setupGame( "Pixel Parachute (Spring)", {
-                requires: "addon_parachute_blossoms",
+            setupGame( "Pixel Parachute (Easter)", {
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
-                bg: "game-parachute/spring_theme/bcg",
-                target: "game-parachute/spring_theme/target",
-                target_front: "game-parachute/spring_theme/target_spring_front",
-                target_offset: 1,
+                bg: "game-parachute/bcg",
+                target: [ "game-parachute/easter_theme/target_easter1", "game-parachute/easter_theme/target_easter2", "game-parachute/easter_theme/target_easter3", "game-parachute/easter_theme/target_easter4", "game-parachute/easter_theme/target_easter5", "game-parachute/easter_theme/target_easter6" ],
+                target_random: true,
+                target_front: "game-parachute/easter_theme/target_easter_front",
+                target_offset: -1,
                 target_width: 384,
                 target_y_offset: 50,
-                target_boosh: [ "game-parachute/spring_theme/petal1", "game-parachute/spring_theme/petal2", "game-parachute/spring_theme/petal3", "game-parachute/spring_theme/petal4", "game-parachute/spring_theme/petal5",
-                    "game-parachute/spring_theme/petal6", "game-parachute/spring_theme/petal7", "game-parachute/spring_theme/petal8", "game-parachute/spring_theme/petal9", "game-parachute/spring_theme/petal10",
-                    "game-parachute/spring_theme/petal11", "game-parachute/spring_theme/petal12" ],
-                clouds: [ "game-parachute/spring_theme/cloud1", "game-parachute/spring_theme/cloud2", "game-parachute/spring_theme/cloud3", "game-parachute/spring_theme/cloud4", "game-parachute/spring_theme/cloud5" ],
+                target_boosh: [ "game-parachute/easter_theme/leaf1", "game-parachute/easter_theme/leaf2", "game-parachute/easter_theme/leaf3", "game-parachute/easter_theme/leaf4", "game-parachute/easter_theme/leaf5",
+                    "game-parachute/easter_theme/leaf6" ],
+                target_splash: [
+                    "items/egg_brown",
+                    "items/egg_blue",
+                    "items/egg_red"
+                ],
+                clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
                 parachute_offset: 0,
                 parachutes: [
-                    "game-parachute/spring_theme/hot_air_balloon_purple", "game-parachute/spring_theme/hot_air_balloon_pink", "game-parachute/spring_theme/hot_air_balloon_pink2",
-                    "game-parachute/spring_theme/hot_air_balloon_orange"
-                ],
-                petparachutes: [
-                    "game-parachute/spring_theme/para_balloon_purple", "game-parachute/spring_theme/para_balloon_pink", "game-parachute/spring_theme/para_balloon_pink2",
-                    "game-parachute/spring_theme/para_balloon_peach"
+                    "game-parachute/easter_theme/chute_easter/chute_easter_1",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_2",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_3",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_4",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_5",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_6",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_7",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_8",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_9",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_10",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_11",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_12",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_13",
+                    "game-parachute/easter_theme/chute_easter/chute_easter_14",
                 ],
                 droplets: [
-                    "game-parachute/spring_theme/petal1",
-                    "game-parachute/spring_theme/petal2",
-                    "game-parachute/spring_theme/petal3",
-                    "game-parachute/spring_theme/petal4",
-                    "game-parachute/spring_theme/petal5",
-                    "game-parachute/spring_theme/petal6",
+                    "items/egg_brown",
+                    "items/egg_blue",
+                    "items/egg_red",
+                    "items/egg_trio_1",
+                    "items/egg_trio_2",
+                    "items/egg"
                 ],
                 target_sound: "sfx/dry_leaf.mp3",
                 drop_sound: "sfx/woodrop.mp3",
@@ -68,13 +80,10 @@
                     "avellana": "avelana",
                     "jimmy": "jimmy",
                     "sammie": "sammie",
-                    "boy": "boy",
-                    "girl": "girl",
-                    "bellflower": "bellflower",
-                    "calendula": "calendula",
-                    "poppy": "poppy",
+                    "chick": "chick",
+                    "rabbit": "rabbit",
                 },
-                playable: [ "bellflower", "calendula", "poppy" ],
+                playable: [ "chick", "rabbit" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
