--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </script>
         <link rel="stylesheet" href="web/fonts.css" />
         <script src="https://cdn.jsdelivr.net/npm/tinycolor2/dist/tinycolor-min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/pinkfluffyunicorn@1.0.1/dist/pinkfluffyunicorn.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/pinkfluffyunicorn@1.0.2/dist/pinkfluffyunicorn.min.js"></script>
         <script src="web/twemoji-parser.js"></script>
         <script src="web/parachute.min.js"></script>
         <style>
@@ -86,7 +86,13 @@
                 volume: params.get( "volume" ),
                 droplets: params.get( "droplets" ),
                 command: params.get( "command" ),
-                cooldown: params.get( "cooldown" )
+                commandOn: params.get( "commandOn" ),
+                cooldown: params.get( "cooldown" ),
+                cpDrop: params.get( "cpDrop" ),
+                cpDropCost: params.get( "cpDropCost" ),
+                cpDroplets: params.get( "cpDroplets" ),
+                cpDropletsCost: params.get( "cpDropletsCost" ),
+                cpDropletsCD: params.get( "cpDropletsCD" )
             });
         </script>
     </body>
